--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -230,6 +230,8 @@
 <!ENTITY Ctr_padlock_mod	"moderny">
 <!ENTITY Ctr_padlock_ext	"Symbol '&brandShortName;' za płaśiwe boki 'about'">
 <!ENTITY Ctr_icopageinfo	"Kliknjenje na symbol wócynja wokno 'Info wó boku">
+<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
+<!ENTITY Ctr_searchbar		"Search bar">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
 <!ENTITY Ctr_extrabar		"Pśidatne symbolowe rědki">
