--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -230,6 +230,8 @@
 <!ENTITY Ctr_padlock_mod	"kaasaegne">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;i' ikoon kehtivate 'about'-lehtede jaoks">
 <!ENTITY Ctr_icopageinfo	"Ikoonil klõpsamine avab akna 'veebilehe teave'">
+<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
+<!ENTITY Ctr_searchbar		"Search bar">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
 <!ENTITY Ctr_extrabar		"Lisa-tööriistaribad">
