--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -230,6 +230,8 @@
 <!ENTITY Ctr_padlock_mod	"Moderno">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"Clicar no Ícone Abre a Janela 'Infs. da Página'">
+<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
+<!ENTITY Ctr_searchbar		"Search bar">
 
 <!ENTITY Ctr_menubar_items	"Posição dos Ítens do Menu">
 <!ENTITY Ctr_extrabar		"Barras de Ferramentas Adicionais">
