--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -230,6 +230,8 @@
 <!ENTITY Ctr_padlock_mod	"сучасний">
 <!ENTITY Ctr_padlock_ext	"Іконка '&brandShortName;' для дійсних «Про...» сторінок">
 <!ENTITY Ctr_icopageinfo	"Клік на іконку відкриває інформаційне вікно">
+<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
+<!ENTITY Ctr_searchbar		"Search bar">
 
 <!ENTITY Ctr_menubar_items	"Позиція пунктів меню">
 <!ENTITY Ctr_extrabar		"Додаткові панелі інструментів">
