--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -230,6 +230,8 @@
 <!ENTITY Ctr_padlock_mod	"现代">
 <!ENTITY Ctr_padlock_ext	"合法的 'about' 页面显示 '&brandShortName;' 图标">
 <!ENTITY Ctr_icopageinfo	"点击图标打开“页面信息”窗口">
+<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
+<!ENTITY Ctr_searchbar		"Search bar">
 
 <!ENTITY Ctr_menubar_items	"菜单项目位置">
 <!ENTITY Ctr_extrabar		"附加工具栏">
