--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -230,6 +230,8 @@
 <!ENTITY Ctr_padlock_mod	"現代風格">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"按下圖示，則開啟「頁面資訊」視窗">
+<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
+<!ENTITY Ctr_searchbar		"Search bar">
 
 <!ENTITY Ctr_menubar_items	"選單列併入">
 <!ENTITY Ctr_extrabar		"新增工具列">
