--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -164,6 +164,7 @@
 <!ENTITY Ctr_addonversion	"Tilføjelseshåndteringens liste med tilføjelser: vis tilføjelsesversion">
 <!ENTITY Ctr_xpinstallui	"Old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Bogmærke-menuknap: panelmenu udseende">
+<!ENTITY Ctr_bmbunsortbm	"Bogmærke-menuknap: 'unsorted bookmarks' submenu">
 <!ENTITY Ctr_bmbutnotext	"Bogmærke-menuknap: skjul etiket på bogmærkelinje">
 <!ENTITY Ctr_skipprintpr	"Udskriv-knap: Spring vis udskrift over">
 <!ENTITY Ctr_tbconmenu		"Værktøjslinjens genvejsmenu: skjul 'flyt til menu', 'fjern fra værktøjslinje', 'genindlæs/bogmærk alle faneblade' og 'fortryd lukning af faneblade">
