--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -164,6 +164,7 @@
 <!ENTITY Ctr_addonversion	"Mostrar la versión del complemento">
 <!ENTITY Ctr_xpinstallui	"Antiguo cuadro de instalación de complementos (... >> xpinstall.customConfirmationUI)">
 <!ENTITY Ctr_bmbutpanelm	"Botón de menú Marcadores (≠ barra lateral): Estilo de menú emergente de panel">
+<!ENTITY Ctr_bmbunsortbm	"Botón de menú Marcadores (≠ barra lateral): 'unsorted bookmarks' submenu">
 <!ENTITY Ctr_bmbutnotext	"Botón de menú Marcadores (≠ barra lateral): Ocultar etiqueta en la barra de marcadores">
 <!ENTITY Ctr_skipprintpr	"Botón Imprimir: Omitir previsualización de la impresión">
 <!ENTITY Ctr_tbconmenu		"Menú contextual de barra de herramientas: Ocultar 'Mover al menú', 'Eliminar de la barra de herramientas', 'Recargar todas las pestañas', 'Añadir pestañas a marcadores...' y 'Deshacer el cierre de la última pestaña'">
