--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -164,6 +164,7 @@
 <!ENTITY Ctr_addonversion	"Laienduste loend: näita lisade versiooni">
 <!ENTITY Ctr_xpinstallui	"Vana lisade paigaldamise aken (about:config eelistus)">
 <!ENTITY Ctr_bmbutpanelm	"Järjehoidjate menüü nupp: paneelimenüü välimus">
+<!ENTITY Ctr_bmbunsortbm	"Järjehoidjate menüü nupp: 'unsorted bookmarks' submenu">
 <!ENTITY Ctr_bmbutnotext	"Järjehoidjate menüü nupp: peida järjehoidjate ribal sildid">
 <!ENTITY Ctr_skipprintpr	"Printimise nupp: jäta vahele printimise eelvaade">
 <!ENTITY Ctr_tbconmenu		"Tööriistariba kontekstimenüü: peida kirjed 'liiguta menüüsse', 'eemalda tööriistamenüült', 'laadi uuesti/lisa järjehoidjatesse kõik kaardid' ja 'võta kaardi sulgemine tagasi'">
