--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -164,6 +164,7 @@
 <!ENTITY Ctr_addonversion	"Listes de modules : afficher la version du module">
 <!ENTITY Ctr_xpinstallui	"Acienne fenêtre d'installation de modules (préférence about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Bouton Marque-pages : apparence Panneau menu">
+<!ENTITY Ctr_bmbunsortbm	"Bouton Marque-pages : 'unsorted bookmarks' submenu">
 <!ENTITY Ctr_bmbutnotext	"Bouton Marque-pages : cacher 'Marque-pages' sur la barre personnelle">
 <!ENTITY Ctr_skipprintpr	"Bouton Imprimer : enlever l'aperçu avant impression">
 <!ENTITY Ctr_tbconmenu		"Menu contextuel des barres d'outils : enlever 'Déplacer vers le menu', 'Retirer de la barre d'outils', 'Actualiser/Marquer tous les onglets' et  'Annuler la fermeture de l'onglet'">
