--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -164,6 +164,7 @@
 <!ENTITY Ctr_addonversion	"Informazioni sui componenti aggiuntivi: mostra versione del componente">
 <!ENTITY Ctr_xpinstallui	"Stile classico per la finestra di installazione dei componenti aggiuntivi (about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Menu del pulsante segnalibri: aspetto del menu a pannello">
+<!ENTITY Ctr_bmbunsortbm	"Menu del pulsante segnalibri: 'unsorted bookmarks' submenu">
 <!ENTITY Ctr_bmbutnotext	"Menu del pulsante segnalibri: nascondi etichetta della barra dei segnalibri">
 <!ENTITY Ctr_skipprintpr	"Pulsante stampa: salta l’anteprima di stampa">
 <!ENTITY Ctr_tbconmenu		"Menu contestuale della barra degli strumenti: nascondi 'Sposta nel menu', 'Rimuovi dalla barra degli strumenti', 'Ricarica/ tutte le schede nei segnalibri' e 'Riapri scheda chiusa'">
