--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -164,6 +164,7 @@
 <!ENTITY Ctr_addonversion	"附加元件清單: 顯示附加元件版本號">
 <!ENTITY Ctr_xpinstallui	"使用傳統彈出式的附加元件安裝視窗 (about:config)">
 <!ENTITY Ctr_bmbutpanelm	"書籤選單按鈕: 書籤選單使用和面板選單同風格的外觀">
+<!ENTITY Ctr_bmbunsortbm	"書籤選單按鈕: 'unsorted bookmarks' submenu">
 <!ENTITY Ctr_bmbutnotext	"書籤選單按鈕: 當此按鈕位於書籤列時，隱藏按鈕文字標籤">
 <!ENTITY Ctr_skipprintpr	"列印按鈕: 跳過列印預覽">
 <!ENTITY Ctr_tbconmenu		"工具列右鍵選單: 隱藏 「移動至選單」、「自工具列移除」、「重新載入所有分頁」、「將所有分頁加入書籤」和「復原已關閉分頁」項目">
