--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -164,6 +164,7 @@
 <!ENTITY Ctr_addonversion	"Seznam Správce rozšíření: zobrazit verzi rozšíření">
 <!ENTITY Ctr_xpinstallui	"Správce rozšíření: starý vzhled (předvolba about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Tlačítko menu záložek: panel menu vzhledu">
+<!ENTITY Ctr_bmbunsortbm	"Tlačítko menu záložek: 'unsorted bookmarks' submenu">
 <!ENTITY Ctr_bmbutnotext	"Tlačítko menu záložek: skrýt návěští na liště záložek">
 <!ENTITY Ctr_skipprintpr	"Tlačítko tisku: přeskočit náhled tisku">
 <!ENTITY Ctr_tbconmenu		"Kontextové menu položek lišty: skrýt 'přesunout do nabídky', 'odebrat z lišty', 'obnovit/přidat do záložek všechny panely' a 'obnovit zavřený panel'">
