--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -164,6 +164,7 @@
 <!ENTITY Ctr_addonversion	"Список додатків у Менеджері додатків: показати версію додатка">
 <!ENTITY Ctr_xpinstallui	"Менеджер додатків: старе вікно встановлення додатків (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Кнопка меню закладок: вигляд меню панелі">
+<!ENTITY Ctr_bmbunsortbm	"Кнопка меню закладок: 'unsorted bookmarks' submenu">
 <!ENTITY Ctr_bmbutnotext	"Кнопка меню закладок: приховати ярлик на панелі закладок">
 <!ENTITY Ctr_skipprintpr	"Кнопка «Друк»: пропустити передогляд друку">
 <!ENTITY Ctr_tbconmenu		"Контекстне меню панелей: приховати «Перенести в меню», «Вилучити з панелі», «Оновити/закласти всі вкладки» та «Повернути закриту вкладку»">
