Update et options.dtd (1.4.5b4)

--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -164,7 +164,7 @@
 <!ENTITY Ctr_addonversion	"Laienduste loend: näita lisade versiooni">
 <!ENTITY Ctr_xpinstallui	"Vana lisade paigaldamise aken (about:config eelistus)">
 <!ENTITY Ctr_bmbutpanelm	"Järjehoidjate menüü nupp: paneelimenüü välimus">
-<!ENTITY Ctr_bmbunsortbm	"Järjehoidjate menüü nupp: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbunsortbm	"Järjehoidjate menüü nupp: alammenüü 'Sortimata järjehoidjad'">
 <!ENTITY Ctr_bmbutnotext	"Järjehoidjate menüü nupp: peida järjehoidjate ribal sildid">
 <!ENTITY Ctr_skipprintpr	"Printimise nupp: jäta vahele printimise eelvaade">
 <!ENTITY Ctr_tbconmenu		"Tööriistariba kontekstimenüü: peida kirjed 'liiguta menüüsse', 'eemalda tööriistamenüült', 'laadi uuesti/lisa järjehoidjatesse kõik kaardid' ja 'võta kaardi sulgemine tagasi'">
@@ -231,8 +231,8 @@
 <!ENTITY Ctr_padlock_mod	"kaasaegne">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;i' ikoon kehtivate 'about'-lehtede jaoks">
 <!ENTITY Ctr_icopageinfo	"Ikoonil klõpsamine avab akna 'veebilehe teave'">
-<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
-<!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsbsize		"Aadressiriba ja otsinguriba kohandatud laius">
+<!ENTITY Ctr_searchbar		"Otsinguriba">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
 <!ENTITY Ctr_extrabar		"Lisa-tööriistaribad">
